@@ -2,8 +2,6 @@ include "/etc/powerman/icebox.dev"
 
 begin global
 	client listener port 10101
-	timeout interval 0.1
-	update interval 100.0
 end global
 
 # Substitute your ice box hostname for "ice42.llnl.gov" 
