@@ -8,8 +8,6 @@
 include "/etc/powerman/icebox.dev"
 begin global
 	client listener port 10101
-	timeout interval 1.0
-	update interval 100.0
 end global
 device "Icebox" "icebox" "ice-test" "1010"
 begin nodes
