@@ -8,8 +8,6 @@
 include "/etc/powerman/wti.spec"
 begin global
 	client listener port 10101
-	timeout interval 1.0
-	update interval 100.0
 end global
 device "WTI" "wti" "wti2" "23"
 begin nodes
