@@ -9,8 +9,6 @@
 include "/etc/powerman/vicebox.dev"
 begin global
 	client listener port 10101
-	timeout interval 1.0
-	update interval 100.0
 end global
 device "ViceBox" "vicebox" "localhost" "11000"
 begin nodes
